--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "chess.js": "^1.0.0-beta.6",
     "react": "^18.2.0",
     "react-chessboard": "^4.2.0",
+    "react-country-flag": "^3.1.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.7.2"
